Add ingredient requirement

--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -65,32 +65,32 @@
 
                                 {{!-- Field 1 --}}
                                 <b><label for="tuluble">INCI Name:</label></b>
-                                <input type="text" name="userInput1" id="userInput1" placeholder="Enter INCI Name"
+                                <input type="text" name="userInput1" required id="userInput1" placeholder="Enter INCI Name"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s/-%\()]*$">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
                                 <b><label for="tuluble">Trade Name:</label></b>
-                                <input type="text" name="userInput2" id="userInput2" placeholder="Enter Trade Name"
+                                <input type="text" name="userInput2" required id="userInput2" placeholder="Enter Trade Name"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s()-]*$">
                                 <p> </p>
 
                                 {{!-- Field 3 --}}
                                 <b><label for="tuluble">Amount Available:</label></b>
-                                <input type="number" name="userInput3" id="userInput3" placeholder="Enter Amount"
+                                <input type="number" name="userInput3" required id="userInput3" placeholder="Enter Amount"
                                     maxlength="20">
                                 <p> </p>
 
                                 {{!-- Field 4 --}}
                                 <b><label for="tuluble">Shelf:</label></b>
-                                <input type="text" name="userInput4" id="userInput4" placeholder="Enter Shelf"
+                                <input type="text" name="userInput4" required id="userInput4" placeholder="Enter Shelf"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
                                 <b><label for="tuluble">Classifier:</label></b>
                                 {{!-- <input type="text" name="userInput5" id="userInput5" placeholder="Enter Classifier"
                                     maxlength="20"> --}}
-                                <select name="userInput5" id="userInput5" class="browser-default">
+                                <select name="userInput5" required id="userInput5" class="browser-default">
                                     <option value="0" disabled selected>Choose your classifier</option>
                                     <option value="Thickener">Thickeners</option>
                                     <option value="Oils">Oils</option>
@@ -110,35 +110,35 @@
                                 <p> &nbsp;</p>
 
                                 <b><label for="tuluble">Lot Number:</label></b>
-                                <input type="text" name="userInput6" id="userInput6" placeholder="Enter Lot Number"
+                                <input type="text" name="userInput6" required id="userInput6" placeholder="Enter Lot Number"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
                                 <b><label for="tuluble">Cost Per Kilo:</label></b>
-                                <input type="text" name="userInput13" id="userInput13" placeholder="Enter Cost Per Kilo"
+                                <input type="text" name="userInput13" required id="userInput13" placeholder="Enter Cost Per Kilo"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
                                 <b><label for="tuluble">Expiration Date:</label></b>
-                                <input type="date" name="userInput12" id="userInput12" placeholder="Enter Expiration Date">
+                                <input type="date" name="userInput12" required id="userInput12" placeholder="Enter Expiration Date">
                                 <p> </p>
 
                                 <b><label for="tuluble">Date Recieved:</label></b>
-                                <input type="date" name="userInput7" id="userInput7" placeholder="Enter Date Received">
+                                <input type="date" name="userInput7" required id="userInput7" placeholder="Enter Date Received">
                                 <p> </p>
 
                                 <b><label for="tuluble">Supplier:</label></b>
-                                <input type="text" name="userInput8" id="userInput8" placeholder="Enter Supplier"
+                                <input type="text" name="userInput8" required id="userInput8" placeholder="Enter Supplier"
                                     maxlength="45" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
                                 <b><label for="tuluble">COA Documents:</label></b>
-                                <input type="url" name="userInput10" id="userInput10" placeholder="Enter Link"
+                                <input type="url" name="userInput10" required id="userInput10" placeholder="Enter Link"
                                     maxlength="200">
                                 <p> </p>
 
                                 <b><label for="tuluble">MSDS Documents:</label></b>
-                                <input type="url" name="userInput11" id="userInput11" placeholder="Enter Link"
+                                <input type="url" name="userInput11" required id="userInput11" placeholder="Enter Link"
                                     maxlength="200">
                                 <p> </p>
 
