--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -75,6 +75,32 @@
                                     maxlength="20" pattern="^[a-zA-Z0-9\s()-]*$">
                                 <p> </p>
 
+                                {{#if (eq isAdmin 2)}}
+                                <b><label for="tuluble">Encoding:</label></b>
+                                <input type="text" name="userInput6" id="userInput6" placeholder="Enter Ingredient Encoding"
+                                    maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
+                                <p> </p>
+                                <br>
+
+                                <b><label for="tuluble">Hazardous?</label></b>
+                                <div class="switch">
+                                <label>
+                                    No
+                                    <input type="checkbox" id="hazardousSwitch">
+                                    <span class="lever"></span>
+                                    Yes
+                                </label>
+                                </div>
+                                <br>
+
+                                <div id="textBoxContainer" style="display: none;">
+                                <b><label for="tuluble">Hazard Details:</label></b>
+                                <input type="text" name="userInput6" id="userInput6" placeholder="Enter Hazard Details"
+                                    maxlength="60" pattern="^[a-zA-Z0-9\s]*$">
+                                <br>
+                                </div>
+                                {{/if}}
+
                                 {{!-- Field 3 --}}
                                 <b><label for="tuluble">Amount Available:</label></b>
                                 <input type="number" name="userInput3" required id="userInput3" placeholder="Enter Amount"
@@ -158,6 +184,19 @@
                 </div>
             </div>
 
+
+            <script>
+                const hazardousSwitch = document.getElementById('hazardousSwitch');
+                const textBoxContainer = document.getElementById('textBoxContainer');
+
+                hazardousSwitch.addEventListener('change', function() {
+                if (hazardousSwitch.checked) {
+                    textBoxContainer.style.display = 'block';
+                } else {
+                    textBoxContainer.style.display = 'none';
+                }
+                });
+            </script>
 
             <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -334,6 +373,7 @@
                 <table id="my-table" class="scrollable">
                     <thead>
                         <tr id="ing">
+                            {{#if isAdmin}}
                             <th id="inci">INCI Name
                                 <a id="sort-inci-button" class="waves-effect">
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
@@ -345,6 +385,13 @@
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
                                 </a>
                             </th>
+                            {{else}}
+                            <th id="trade">Ingredient ID
+                                <a id="sort-trade-button" class="waves-effect">
+                                    <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                                </a>
+                            </th>
+                            {{/if}}
                             <th id="trade">Supplier
                                 <a id="sort-supplier-button" class="waves-effect">
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
@@ -382,8 +429,12 @@
                                             </b></div>
                                         <div class="col s12">&nbsp;</div>
                                         <div class="col s6">
-                                            <span><b>Trade Name:</b> {{this.trade_name}}<br></br>
+                                            {{#if ../isAdmin}}
+                                                <b>Trade Name:</b> {{this.trade_name}}<br></br>
                                                 <b>INCI Name:</b> {{this.inci_name}}<br></br>
+                                            {{else}}
+                                                <b>Ingredient ID:</b> {{this.encoding}}<br></br>
+                                            {{/if}}
                                                 <b>Amount Available:</b> {{this.amt}} {{this.unit}}<br></br>
                                                 <b>Supplier:</b> {{this.supplier}}<br></br>
                                                 <b>Lot Number:</b> {{this.lot_num}}<br></br>
@@ -402,8 +453,12 @@
                                     </div>
                                 </div>
                             </td>
+                            {{#if ../isAdmin}}
                             <td>{{this.trade_name}}</td>
                             <td>{{this.supplier}}</td>
+                            {{else}}
+                            <td>{{this.encoding}}</td>
+                            {{/if}}
                             <td>{{this.amt}} {{this.unit}}</td>
                             <td>{{this.shelf}}</td>
                             <td>{{this.lot_num}}</td>
@@ -413,11 +468,6 @@
                                     <a href="/inventory/archive-ingredient/{{this.ingredient_id}}"
                                         class="btn waves-effect waves-luluble-pink luluble-pink">Archive</a>
                                 </div>
-                                {{!-- <script>
-                                    function archive() {
-                                        window.location = "/inventory/archive-ingredient/" + {{this.ingredient_id}};
-                                    }
-                                </script> --}}
                             </td>
                             <td>
                                 <div class="edit_button">
@@ -442,6 +492,33 @@
                                                 <input type="text" name = "userInput2" id="userInput2" value="{{this.trade_name}}" maxlength="200" pattern="^[a-zA-Z0-9\s]*$">
                                                 <p> </p>
 
+                                                {{#if (eq isAdmin 2)}}
+                                                <b><label for="tuluble">Encoding:</label></b>
+                                                <input type="text" name="userInput6" id="userInput6" value="{{this.encoding}}"
+                                                    maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
+                                                <p> </p>
+                                                <br>
+
+                                                <b><label for="tuluble">Hazardous?</label></b>
+                                                <div class="switch">
+                                                <label>
+                                                    No
+                                                    <input type="checkbox" id="hazardousSwitchEdit">
+                                                    <span class="lever"></span>
+                                                    Yes
+                                                </label>
+                                                </div>
+                                                <br>
+
+                                                <div id="textBoxContainerEdit" style="display: none;">
+                                                <b><label for="tuluble">Hazard Details:</label></b>
+                                                <input type="text" name="userInput6" id="userInput6" placeholder="{{this.hazardDetails}}"
+                                                    maxlength="60" pattern="^[a-zA-Z0-9\s]*$">
+                                                <br>
+                                                </div>
+                                                {{/if}}
+
+
                                                     {{!-- Field 3 --}}
                                                     <b><label for="tuluble">Amount Available:</label></b>
                                                     <input type="number" name="userInput3" id="userInput3"
@@ -454,13 +531,9 @@
                                                         value="{{this.shelf}}" pattern="^[a-zA-Z0-9\s]*$">
                                                     <p> </p>
 
-                                                    <b><label for="tuluble">Reselect Classifier:</label></b>
-                                                    {{!-- <input type="text" name="userInput5" id="userInput5"
-                                                        placeholder="Enter Classifier" maxlength="20"> --}}
+                                                    <b><label for="tuluble">Select Classifier:</label></b>
+                                                
                                                     <select name="userInput5" id="userInput5" class="browser-default">
-                                                        {{!-- <option value="{{this.classifier_id}}" disabled selected>
-                                                            {{this.classifier_id}}</option> --}}
-                                                        
                                                         <option value="Thickener" {{isSelected "Thickener" classifier_id}}>Thickeners</option>
                                                         <option value="Oils" {{isSelected "Oils" classifier_id}}>Oils</option>
                                                         <option value="Butters" {{isSelected "Butters" classifier_id}}>Butters</option>
@@ -537,6 +610,19 @@
             </div>
         </div>
         </div>
+
+         <script>
+            const hazardousSwitch = document.getElementById('hazardousSwitchEdit');
+            const textBoxContainer = document.getElementById('textBoxContainerEdit');
+
+            hazardousSwitch.addEventListener('change', function() {
+            if (hazardousSwitch.checked) {
+                textBoxContainer.style.display = 'block';
+            } else {
+                textBoxContainer.style.display = 'none';
+            }
+            });
+        </script>
 
         <script>
             $(document).ready(function () {
